<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/calc"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/textBox"
            android:layout_width="match_parent"
            android:layout_height="@dimen/textBox_height">
            <TextView
                android:id="@+id/screen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/border_screen"
                android:textSize="@dimen/textBox_textSize"
                android:maxLength="50"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/num0"
            android:layout_width="match_parent"
            android:layout_height="@dimen/num_height"
            android:layout_below="@id/textBox"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/clear"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_clear"
                android:text="@string/app_clear"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <TextView
                android:id="@+id/plusOrMinus"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_action"
                android:text="@string/app_plusOrMinus"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <TextView
                android:id="@+id/percent"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_action"
                android:text="@string/app_percent"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <TextView
                android:id="@+id/division"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_action"
                android:text="@string/app_division"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/num_height"
            android:layout_below="@id/num0"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/seven"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_num"
                android:text="@string/app_seven"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <TextView
                android:id="@+id/eight"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_num"
                android:text="@string/app_eight"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <TextView
                android:id="@+id/nine"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_num"
                android:text="@string/app_nine"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <TextView
                android:id="@+id/multiplication"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_action"
                android:text="@string/app_multiplication"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/num2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/num_height"
            android:layout_below="@id/num1"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/four"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_num"
                android:text="@string/app_four"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>

            <TextView
                android:id="@+id/five"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_num"
                android:text="@string/app_five"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>

            <TextView
                android:id="@+id/six"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_num"
                android:text="@string/app_six"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <TextView
                android:id="@+id/subtraction"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_action"
                android:text="@string/app_subtraction"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/num3"
            android:layout_width="match_parent"
            android:layout_height="@dimen/num_height"
            android:layout_below="@id/num2"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/one"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_num"
                android:text="@string/app_one"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <TextView
                android:id="@+id/two"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_num"
                android:text="@string/app_two"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <TextView
                android:id="@+id/three"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_num"
                android:text="@string/app_three"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <TextView
                android:id="@+id/addition"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_action"
                android:text="@string/app_addition"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/num4"
            android:layout_width="match_parent"
            android:layout_height="@dimen/num_height"
            android:layout_below="@id/num3"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/zero"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_num"
                android:text="@string/app_zero"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <TextView
                android:id="@+id/dot"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_num"
                android:text="@string/app_dot"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <TextView
                android:id="@+id/equally"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/border_action"
                android:text="@string/app_equally"
                android:textSize="@dimen/num_textSize"
                android:gravity="center"/>
            <ImageButton
                android:id="@+id/engineer"
                android:layout_width="@dimen/num_width"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/baseline_iso_black_18dp"
                android:background="@drawable/border_action" />
        </LinearLayout>

    </RelativeLayout>
</FrameLayout>